Add Company Table and Base Entity Created and Modified are Application Users.

--- a/Teamsheet.Data/Teamsheet.Data.csproj
+++ b/Teamsheet.Data/Teamsheet.Data.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Context\TeamsheetContext.cs" />
     <Compile Include="EntityConfiguration\ActivityConfiguration.cs" />
     <Compile Include="EntityConfiguration\ApplicationUserConfiguration.cs" />
+    <Compile Include="EntityConfiguration\CompanyConfiguration.cs" />
     <Compile Include="EntityConfiguration\DayConfiguration.cs" />
     <Compile Include="EntityConfiguration\EntryConfiguration.cs" />
     <Compile Include="EntityConfiguration\SectionConfiguration.cs" />
@@ -83,6 +84,10 @@
     <Compile Include="Migrations\201611201309478_AddCompanyNameAndNameColumnToApplicationUserTable.cs" />
     <Compile Include="Migrations\201611201309478_AddCompanyNameAndNameColumnToApplicationUserTable.Designer.cs">
       <DependentUpon>201611201309478_AddCompanyNameAndNameColumnToApplicationUserTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201611201347052_AddCompanyTable.cs" />
+    <Compile Include="Migrations\201611201347052_AddCompanyTable.Designer.cs">
+      <DependentUpon>201611201347052_AddCompanyTable.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -116,6 +121,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201611201309478_AddCompanyNameAndNameColumnToApplicationUserTable.resx">
       <DependentUpon>201611201309478_AddCompanyNameAndNameColumnToApplicationUserTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201611201347052_AddCompanyTable.resx">
+      <DependentUpon>201611201347052_AddCompanyTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
