Implemented Create Company

--- a/Teamsheet.Data/Teamsheet.Data.csproj
+++ b/Teamsheet.Data/Teamsheet.Data.csproj
@@ -96,6 +96,10 @@
     <Compile Include="Migrations\201611211830419_removedDayTable.Designer.cs">
       <DependentUpon>201611211830419_removedDayTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201611211927394_AddCompanyDbContext.cs" />
+    <Compile Include="Migrations\201611211927394_AddCompanyDbContext.Designer.cs">
+      <DependentUpon>201611211927394_AddCompanyDbContext.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -137,6 +141,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201611211830419_removedDayTable.resx">
       <DependentUpon>201611211830419_removedDayTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201611211927394_AddCompanyDbContext.resx">
+      <DependentUpon>201611211927394_AddCompanyDbContext.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
