--- a/Teamsheet.Entities/Teamsheet.Entities.csproj
+++ b/Teamsheet.Entities/Teamsheet.Entities.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Activity.cs" />
     <Compile Include="BaseEntity.cs" />
     <Compile Include="Company.cs" />
+    <Compile Include="Country.cs" />
     <Compile Include="Entry.cs" />
     <Compile Include="IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
