--- a/Teamsheet.WebApi/Teamsheet.WebApi.csproj
+++ b/Teamsheet.WebApi/Teamsheet.WebApi.csproj
@@ -100,8 +100,16 @@
       <HintPath>..\packages\Microsoft.OData.Edm.7.0.0\lib\portable-net45+win8+wpa81\Microsoft.OData.Edm.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.Owin, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Owin.3.0.1\lib\net45\Microsoft.Owin.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Spatial, Version=7.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Spatial.7.0.0\lib\portable-net45+win8+wpa81\Microsoft.Spatial.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
+      <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Net.Http" />
@@ -149,6 +157,7 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\ActivitiesController.cs" />
+    <Compile Include="Controllers\CompaniesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -178,6 +187,10 @@
     <ProjectReference Include="..\Teamsheet.Entities\Teamsheet.Entities.csproj">
       <Project>{d397ca25-6dc7-4370-ba9c-4b3e8707e302}</Project>
       <Name>Teamsheet.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Teamsheet.Web\Teamsheet.Web.csproj">
+      <Project>{f90f4f93-df3e-4a4e-b4c5-8ee00365e9c7}</Project>
+      <Name>Teamsheet.Web</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
