--- a/Teamsheet.WebApi/packages.config
+++ b/Teamsheet.WebApi/packages.config
@@ -20,6 +20,8 @@
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.OData.Core" version="7.0.0" targetFramework="net452" />
   <package id="Microsoft.OData.Edm" version="7.0.0" targetFramework="net452" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Spatial" version="7.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="Owin" version="1.0" targetFramework="net452" />
 </packages>
